controllers/refresolver/gatewayapitlsroute/testdata/gatewayapi_tlsroute_backend_with_namespace.yaml
apiVersion: gateway.networking.k8s.io/v1alpha3
kind: TLSRoute
metadata:
  name: gatewayapi-tlsroute
  namespace: test-gslb
spec:
  parentRefs:
  - name: gatewayapi-gateway
  hostnames:
  - gatewayapi-tlsroute.cloud.example.com
  rules:
  - backendRefs:
    - name: gatewayapi-tlsroute-service
      namespace: test-backend
      port: 8080
