controllers/refresolver/gatewayapitlsroute/testdata/gatewayapi_tlsroute_multiple_hostnames.yaml
apiVersion: gateway.networking.k8s.io/v1alpha3
kind: TLSRoute
metadata:
  name: gatewayapi-tlsroute
  namespace: test-gslb
spec:
  parentRefs:
  - name: gatewayapi-gateway
  hostnames:
  - gatewayapi-tlsroute1.cloud.example.com
  - gatewayapi-tlsroute2.cloud.example.com
  rules:
  - backendRefs:
    - name: gatewayapi-tlsroute-service
      port: 8080
